<?xml version="1.0" encoding="utf-8"?>
<ScrollView

    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="ie.app.projectplanner.activities.Edit">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/ConstructionAddView">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Construction_name"
            android:id="@+id/textView4"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:textStyle="bold" />


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Construction_start_date"
            android:id="@+id/textView6"
            android:textStyle="bold"
            android:layout_below="@+id/ConstructionTitle"
            android:layout_centerHorizontal="true" />

        <DatePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/datePicker"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            android:layout_below="@+id/textView6"
            android:layout_centerHorizontal="true" />

        <TextView
            android:text="Estimated Finish Date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/textView7"
            android:layout_marginTop="25dp"
            android:layout_below="@+id/datePicker"
            android:layout_centerHorizontal="true"
            android:textStyle="normal|bold" />

        <DatePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="22dp"
            android:id="@+id/FinishDate"
            android:datePickerMode="spinner"
            android:calendarViewShown="false"
            android:layout_below="@+id/textView7"
            android:layout_alignStart="@+id/datePicker"
            android:layout_marginStart="8dp"
            android:layout_marginTop="12dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/project_type_prompt"
            android:id="@+id/textView3"
            android:textStyle="bold"
            android:layout_marginEnd="19dp"
            android:layout_marginTop="31dp"
            android:layout_below="@+id/FinishDate"
            android:layout_alignEnd="@+id/datePicker" />


        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ConstructionTitle"
            android:hint="@string/Construction_x"
            android:layout_below="@+id/textView4"
            android:layout_alignParentStart="true" />

        <EditText

            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPersonName"
            android:ems="10"
            android:id="@+id/MemberNames"
            android:hint="@string/john_doe_joe_bloggs"
            android:layout_marginTop="15dp"
            android:layout_below="@+id/textView5"
            android:layout_alignParentEnd="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Construction_members_sperate_with_a_comma"
            android:id="@+id/textView5"
            android:textStyle="bold"
            android:layout_below="@+id/type_of_construction"
            android:layout_alignStart="@+id/FinishDate"
            android:layout_marginTop="20dp" />

        <Button
            android:text="Add a Location"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/Maps_Button"
            android:layout_below="@+id/MemberNames"
            android:layout_alignParentStart="true"
            android:layout_alignParentEnd="true"/>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/edit_Construction"
            android:id="@+id/editButton"
            android:onClick="editButtonClicked"
            android:layout_below="@+id/Address"

            android:layout_centerHorizontal="true" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="n/a"
            android:id="@+id/Address"
            android:textStyle="bold"
            android:layout_below="@+id/Maps_Button"
            android:layout_alignParentEnd="true"
            android:layout_alignParentStart="true"
            android:layout_margin="20dp"
            android:textAlignment="textStart"
            android:visibility="gone" />

        <Spinner
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/type_of_construction"
            android:layout_below="@+id/textView3"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="29dp" />

    </RelativeLayout>
</ScrollView>